--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
+    "cucumber": "^0.10.2",
     "http-server": "^0.9.0"
   },
   "dependencies": {}
