--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   "license": "MIT",
   "devDependencies": {
     "cucumber": "^0.10.2",
-    "http-server": "^0.9.0"
+    "http-server": "^0.9.0",
+    "zombie": "^4.2.1"
   },
   "dependencies": {}
 }
